gitops/nonprod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-minikube-app
  labels:
    app: devops-minikube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-minikube-app
  template:
    metadata:
      labels:
        app: devops-minikube-app
    spec:
      containers:

        - name: devops-minikube-app
          image: devops-minikube-app:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
