gitops/nonprod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-minikube-service
spec:
  selector:
    app: devops-minikube-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
